# deltachat-ios

./: .gitattributes  .gitignore  .gitmodules  .swiftformat  .swiftlint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Podfile  README.md  RELEASE.md  TESTING.md  clean_derived.sh  convertTranslations.js  deltachat-ios.xctestplan  get_libraries.sh  untranslated.xml  updateTranslations.sh
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  mergeable.yml
DcAppClip/: AppClipApp.swift  DcAppClip.entitlements  Info.plist
DcNotificationService/: DcNotificationService.entitlements  NotificationService.swift  UNMutableNotificationContent+init.swift
DcShare/: ChatListCell.swift  ChatListController.swift  DcShare.entitlements  Info.plist  SendingController.swift  ShareAttachment.swift  ShareViewController.swift
DcTests/: DcTests.swift
DcWebxdcWidget/: DcWebxdcWidget.swift  DcWebxdcWidgetBundle.swift  WidgetProvider.swift
DcWidget/: DcWidget.swift  DcWidgetBundle.swift  DummyIntent.swift  WidgetProvider.swift
DeltaChatShare/: DeltaChatShare.entitlements  Info.plist  ShareViewController.swift
MostRecentWebXDCWidget/: MostRecentWebXDCWidget.swift  MostRecentWebXDCWidgetBundle.swift  MostRecentWebXDCWidgetControl.swift
az.lproj/: Localizable.strings  Localizable.stringsdict
ca.lproj/: Localizable.strings  Localizable.stringsdict
ci_scripts/: ci_post_clone.sh
da.lproj/: Localizable.strings  Localizable.stringsdict
de.lproj/: Localizable.strings  Localizable.stringsdict
deltachat-ios/: AccountSetupController.swift  ActionCell.swift  AppCoordinator.swift  AppDelegate.swift  AppTabBarController.swift  BaseController.swift  ChatListController.swift  (+40 more)
deltachat-ios-uitests/: ChatTests.swift
deltachat-ios.xcodeproj/: project.pbxproj
deltachat-ios.xcworkspace/: contents.xcworkspacedata
deltachat-ios/libraries/deltachat-core/: .travis.yml  CHANGELOG.md  LICENSE  README.md  deltachat-core.cbp  doxygen.config  meson.build  meson_options.txt
deltachat-ios/libraries/deltachat-core/.scripts/: deploy.sh
deltachat-ios/libraries/deltachat-core/cmdline/: README.md  SNIPPETS.txt  cmdline.c  cmdline.h  main.c  meson.build  stress.c  stress.h
deltachat-ios/libraries/deltachat-core/docs/: Doxyfile  README.md  release-checklist.md  update.sh
deltachat-ios/libraries/deltachat-core/docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  mraheader_8h_source.html  mrapeerstate_8h_source.html  mrchat_8h_source.html  mrchatlist_8h_source.html  mrcontact_8h_source.html  mrdehtml_8h_source.html  mrevent_8h.html  mrevent_8h_source.html  mrimap_8h_source.html  mrjob_8h_source.html  mrkey_8h_source.html  mrkeyring_8h_source.html  mrloginparam_8h_source.html  mrmailbox_8h_source.html  mrmailbox__internal_8h_source.html  mrmimefactory_8h_source.html  mrmimeparser_8h_source.html  mrmsg_8h_source.html  mrosnative_8h_source.html  mrparam_8h_source.html  mrpgp_8h_source.html  mrpoortext_8h_source.html  mrsaxparser_8h_source.html  mrsimplify_8h_source.html  mrsmtp_8h_source.html  mrsqlite3_8h_source.html  mrstock_8h_source.html  mrtools_8h_source.html  structmrchat__t-members.html  (+13 more)
deltachat-ios/libraries/deltachat-core/docs/html/search/: all_1.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js
deltachat-ios/libraries/deltachat-core/libs/: README.md  update-libetpan.sh  update-openssl.sh
deltachat-ios/libraries/deltachat-core/libs/cyrussasl/: meson.build
deltachat-ios/libraries/deltachat-core/libs/cyrussasl/include/sasl/: NTMakefile
deltachat-ios/libraries/deltachat-core/libs/cyrussasl/lib/: getaddrinfo.c  getnameinfo.c
deltachat-ios/libraries/deltachat-core/libs/libetpan/: meson.build
deltachat-ios/libraries/deltachat-core/libs/libetpan/include/libetpan/: config.h
deltachat-ios/libraries/deltachat-core/libs/libetpan/src/low-level/nntp/: newsnntp.c
deltachat-ios/libraries/deltachat-core/libs/libetpan/src/low-level/smtp/: mailsmtp.c
deltachat-ios/libraries/deltachat-core/libs/netpgp/: meson.build  meson_options.txt
deltachat-ios/libraries/deltachat-core/libs/netpgp/include/: netpgp-extra.h
deltachat-ios/libraries/deltachat-core/libs/netpgp/include/netpgp/: config-netpgp.h  config-original-as-configured-for-ubuntu-16.04-64bit.h  config-pep.h  create.h  crypto.h  defs.h  keyring.h  memory.h  netpgpdefs.h  netpgpdigest.h  netpgpsdk.h  openssl11stub.h  packet-parse.h  packet-show.h  packet.h  readerwriter.h  signature.h  validate.h  version.h  writer.h
deltachat-ios/libraries/deltachat-core/libs/netpgp/src/: compress.c  create.c  crypto.c  keyring.c  misc.c  openssl_crypto.c  packet-parse.c  packet-show.c  reader.c  signature.c  symmetric.c  validate.c  writer.c
deltachat-ios/libraries/deltachat-core/libs/openssl/: meson.build
deltachat-ios/libraries/deltachat-core/libs/sqlite/: meson.build  meson_options.txt
deltachat-ios/libraries/deltachat-core/python/: CHANGELOG  README.rst  setup.cfg  setup.py  tox.ini
deltachat-ios/libraries/deltachat-core/python/doc/: api.rst
deltachat-ios/libraries/deltachat-core/python/src/deltachat/: __init__.py  _build.py  account.py  chatting.py  const.py  message.py
deltachat-ios/libraries/deltachat-core/python/tests/: conftest.py  test_account.py  test_mrmailbox.py
deltachat-ios/libraries/deltachat-core/python/wheelbuilder/: Dockerfile  build-wheels.sh
deltachat-ios/libraries/deltachat-core/src/: dc_aheader.c  dc_aheader.h  dc_apeerstate.c  dc_apeerstate.h  dc_array.c  dc_array.h  dc_chat.c  dc_chat.h  dc_chatlist.c  dc_chatlist.h  dc_configure.c  dc_contact.c  dc_contact.h  dc_context.c  dc_context.h  dc_dehtml.c  dc_dehtml.h  dc_e2ee.c  dc_hash.c  dc_hash.h  dc_imap.c  dc_imap.h  dc_imex.c  dc_job.c  dc_job.h  dc_jobthread.c  dc_jobthread.h  dc_key.c  dc_key.h  dc_keyhistory.c  dc_keyring.c  dc_keyring.h  dc_log.c  dc_loginparam.c  dc_loginparam.h  dc_lot.c  dc_lot.h  dc_mimefactory.c  dc_mimefactory.h  dc_mimeparser.c  (+118 more)
(+803 files in other folders)
