lib_src = [
  'dc_aheader.c',
  'dc_apeerstate.c',
  'dc_array.c',
  'dc_chat.c',
  'dc_chatlist.c',
  'dc_contact.c',
  'dc_dehtml.c',
  'dc_hash.c',
  'dc_imap.c',
  'dc_job.c',
  'dc_key.c',
  'dc_keyring.c',
  'dc_loginparam.c',
  'dc_lot.c',
  'dc_context.c',
  'dc_configure.c',
  'dc_e2ee.c',
  'dc_imex.c',
  'dc_keyhistory.c',
  'dc_log.c',
  'dc_qr.c',
  'dc_receive_imf.c',
  'dc_securejoin.c',
  'dc_mimefactory.c',
  'dc_mimeparser.c',
  'dc_msg.c',
  'dc_openssl.c',
  'dc_param.c',
  'dc_pgp.c',
  'dc_saxparser.c',
  'dc_simplify.c',
  'dc_smtp.c',
  'dc_sqlite3.c',
  'dc_stock.c',
  'dc_strbuilder.c',
  'dc_strencode.c',
  'dc_token.c',
  'dc_tools.c',
  'dc_uudecode.c',
]
lib_hdr = [
  'deltachat.h',
  'dc_apeerstate.h',
  'dc_dehtml.h',
  'dc_hash.h',
  'dc_imap.h',
  'dc_job.h',
  'dc_key.h',
  'dc_keyring.h',
  'dc_loginparam.h',
  'dc_lot.h',
  'dc_context.h',
  'dc_mimefactory.h',
  'dc_mimeparser.h',
  'dc_msg.h',
  'dc_param.h',
  'dc_pgp.h',
  'dc_saxparser.h',
  'dc_simplify.h',
  'dc_smtp.h',
  'dc_sqlite3.h',
  'dc_stock.h',
  'dc_strbuilder.h',
  'dc_strencode.h',
  'dc_tools.h',
]
lib_inc = include_directories('.')


lib = library(
  'deltachat', lib_src,
  dependencies: [zlib, openssl, pthreads, sasl, sqlite, etpan, netpgp],
  include_directories: lib_inc,
  install: true,
)
install_headers(
  lib_hdr,
  subdir: 'deltachat',
)
